--- a/Areas/Admin/Views/SubMenus/Index.cshtml
+++ b/Areas/Admin/Views/SubMenus/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using HoiTroWebsite.Help
-@model HoiTroWebsite.Models.Menu
+﻿@model HoiTroWebsite.Models.Menu
 
 @{
     ViewBag.Title = "Index";
@@ -8,72 +7,372 @@
 
 <h2>Index</h2>
 
-<div class="col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            Quản lý Tin đăng cho thuê phòng
+<div class="panel-body">
+    <div class="bs-example" style="text-align:right; padding-bottom:10px;">
+        <div class="btn-group">
+            @Html.DropDownListFor(model => model.id, (SelectList)ViewBag.Menu, " --- Tất cả Menu --- ",
+                new { @class = "form-control", @id = "Menu" })
         </div>
-        <div class="panel-body">
-            <div class="bs-example" style="text-align:right; padding-bottom:10px;">
-                <div class="btn-group">
-                    @Html.DropDownListFor(model => model.id, (SelectList)ViewBag.Menu, " --- Tất cả Menu --- ",
-                        new { @class = "form-control", @id = "Menu" })
-                </div>
-                <div class="btn-group">
-                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "SubMenus", new { }, new { @class = "btn btn-primary" })
-                </div>
-                <div id="getSubMenu"></div>
+        <button class="btn btn-success text-white" id="btnAdd">
+            <a href="#" class="" data-toggle="modal" data-target="#modalSubMenu">
+                <i class="fa fa-plus" aria-hidden="true"></i>Tạo thêm
+            </a>
+        </button>
+        <div id="getSubMenu"></div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <table width="100%" class="table table-striped table-bordered table-hover myTable" id="dataTables-example">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayName("STT")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Tên")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Liên kết")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Meta")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Hiển thị")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Sắp xếp")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Ngày tạo")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Menu cha")
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tbsubmenu">
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalSubMenu" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Basic Modal</h4>
+            </div>
+            <div class="modal-body">
+                @*<h3>Modal Body</h3>*@
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
-    <!-- /.table-responsive -->
-    <div class="well">
-        <h4>DataTables Usage Information</h4>
-        <p>
-            DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized
-            version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome
-            icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.
-        </p>
-        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">
-            View DataTables
-            Documentation
-        </a>
-    </div>
 </div>
-@section _Footer
+@section Scripts
 {
-    <!-- DataTables JavaScript -->
-    <script src="~/Areas/Admin/Content/vendor/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/Areas/Admin/Content/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-    <script src="~/Areas/Admin/Content/vendor/datatables-responsive/dataTables.responsive.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="~/Areas/Admin/Content/dist/js/sb-admin-2.js"></script>
-
-    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
         $(document).ready(function () {
+            LoadSubMenu();
+        })
+        // Create
+        $('#btnAdd').click(function () {
+            $.ajax({
+                url: '/Admin/SubMenus/Create',
+                type: 'get',
+                success: function (data) {
+                    //console.log(data);
+                    $('#modalSubMenu').find('.modal-body').html(data);
+                },
+            });
+        })
+        // Detail
+        $(document).on('click', '.btnDetail', function () {
+            var id = $(this).data('id');
+
+            $.ajax({
+                url: '/Admin/SubMenus/Details/' + id,
+                type: 'GET',
+                dataType: 'html', // Đảm bảo server trả về HTML
+                success: function (data) {
+                    // Hiển thị nội dung chi tiết trong modal
+                    const modal = $('#modalSubMenu');
+                    modal.find('.modal-body').html(data);
+                    modal.modal('show'); // Hiển thị modal
+                },
+                error: function (xhr, status, error) {
+                    alert('Không thể tải chi tiết submenu. Vui lòng thử lại.');
+                    console.error('Chi tiết lỗi:', xhr.responseText || error);
+                }
+            });
+        });
+        // Edit
+        $(document).on('click', '.btnEdit', function () {
+            var id = $(this).data('id');
+
+            $.ajax({
+                url: '/Admin/SubMenus/Edit/' + id,
+                type: 'get',
+                success: function (data) {
+                    $('#modalSubMenu').find('.modal-body').html(data);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                }
+            });
+        });
+        // Delete
+        $(document).on('click', '.btnDelete', function () {
+            var id = $(this).data('id');
+
+            $.ajax({
+                url: '/Admin/SubMenus/Delete/' + id,
+                type: 'get',
+                success: function (data) {
+                    $('#modalSubMenu').find('.modal-body').html(data);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                }
+            });
+        });
+
+        function LoadSubMenu1(submenu) {
+            const table = $('#dataTables-example').DataTable();
+            table.clear(); // Xóa dữ liệu cũ trong DataTable
+
+            // Thêm dữ liệu mới
+            $.each(submenu, function (k, v) {
+                const dateBegin = v.DateBegin === null ? '' : formatDate(v.DateBegin);
+                table.row.add([
+                    k + 1,
+                    v.Name,
+                    v.Link,
+                    v.Meta,
+                    v.Hide,
+                    v.Order,
+                    dateBegin,
+                    v.Menu,
+                    `<button class="btn btn-xs btn-info btnDetail" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Chi tiết </button>
+                     <button class="btn btn-xs btn-warning btnEdit" data-id="${v.Id}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Chỉnh sửa </button>
+                     <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Xóa </button>`
+                ]);
+            });
+
+            table.draw(); // Vẽ lại bảng
+        }
+        function LoadSubMenu() {
+            var menuId = $('#Menu').val(); // Lấy giá trị menuId
+            $.ajax({
+                url: '/Admin/SubMenus/getSubMenu',
+                type: 'get',
+                data: { id: menuId }, // Truyền menuId vào data
+                success: function (data) {
+                    console.log(data)
+                    if (data.code == 200) {
+
+                        $('#tbsubmenu').empty();
+                        //console.log(data)
+                        $.each(data.submenu, function (k, v) {
+                            //console.log(data.submenu)
+                            const dateBegin = v.DateBegin === null ? '' : formatDate(v.DateBegin);
+
+                            let tr = '<tr id="' + v.Id + '">'
+                            tr += '<td>' + (k + 1) + '</td>';
+                            tr += '<td>' + v.Name + '</td>';
+                            tr += '<td>' + v.Link + '</td>';
+                            tr += '<td>' + v.Meta + '</td>';
+                            tr += '<td>' + v.Hide + '</td>';
+                            tr += '<td>' + v.Order + '</td>';
+                            tr += '<td>' + dateBegin + '</td>';
+                            tr += '<td>' + v.Menu + '</td>';
+                            tr += '<td class="text-right">';
+                            tr += '<button class="btn btn-xs btn-info btnDetail" data-id="' + v.Id + '"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Chi tiết </button>';
+                            tr += '<button class="btn btn-xs btn-warning btnEdit" data-id="' + v.Id + '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Chỉnh sửa </button>';
+                            tr += '<button class="btn btn-xs btn-danger btnDelete" data-id="' + v.Id + '"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-toggle="modal" data-target="#modalSubMenu"> Xóa </button>';
+                            tr += '</td>';
+                            tr += '</tr>';
+                            $('#tbsubmenu').append(tr);
+                        });
+
+                        if ($.fn.dataTable.isDataTable('#dataTables-example')) {
+
+                            var table = $('#dataTables-example').DataTable();
+                            table.clear();
+                            table.rows.add($('#tbsubmenu').find('tr'));
+                            table.draw();
+                        } else {
+
+                            $('#dataTables-example').DataTable({
+                                "paging": true,
+                                "searching": true,
+                                "ordering": true
+                            });
+                        }
+
+                        attachEventHandlers();
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                }
+            });
+        }
+
+        function formatDate(jsonDate) {
+
+            const timestamp = parseInt(jsonDate.replace(/\/Date\((\d+)\)\//, '$1'));
+            const date = new Date(timestamp);
+
+            const day = date.getDate().toString().padStart(2, '0');
+            const month = (date.getMonth() + 1).toString().padStart(2, '0');
+            const year = date.getFullYear();
+
+            return `${day}/${month}/${year}`;
+        }
+
+        // Submet create
+        $(document).on('submit', '#form-create', function (e) {
+            e.preventDefault();
+            const form_data = $(this).serializeArray();
+            console.log(form_data);
+            $.ajax({
+                url: '/Admin/SubMenus/Create',
+                type: 'POST',
+                data: form_data,
+                success: function (response) {
+                    console.log(response)
+                    if (response.code == 200) {
+                        $('#modalSubMenu').find('.close').click();
+                        LoadSubMenu();
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                }
+            });
+        });
+        // Submit edit
+        $(document).on('submit', '#form-edit', function (e) {
+            e.preventDefault();
+
+            const form_data = new FormData(this);
+            const id = $(this).find("input[name='id']").val();
+
+            $.ajax({
+                url: '/Admin/SubMenus/Edit/' + id,
+                type: 'POST',
+                data: form_data,
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    console.log(response);
+                    if (response.code === 200) {
+                        $('#modalSubMenu').find('.close').click();
+                        LoadSubMenu();
+                    } else {
+                        alert(response.msg);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                    alert("Có lỗi xảy ra khi cập nhật submenu.");
+                }
+            });
+        });
+
+        // Submit delete
+        $(document).on('submit', '#form-delete', function (e) {
+            e.preventDefault();
+
+            const id = $(this).find("input[name='id']").val();
+            const token = $('input[name="__RequestVerificationToken"]').val();
+
+            $.ajax({
+                url: '/Admin/SubMenus/DeleteConfirmed',
+                type: 'POST',
+                data: { id: id, __RequestVerificationToken: token },
+                success: function (response) {
+                    console.log(response);
+                    if (response.code == 200) {
+                        $('#modalSubMenu').find('.close').click();
+                        LoadSubMenu();
+                    } else {
+                        alert(response.msg);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Lỗi:', error);
+                    console.error('Mã trạng thái:', xhr.status);
+                    console.error('Nội dung lỗi:', xhr.responseText);
+                    alert("Có lỗi xảy ra khi xóa submenu. Vui lòng kiểm tra log lỗi.");
+                }
+            });
+        });
+
+    </script>
+
+    <script>
+        // Ajax dropdownlist
+        $(document).ready(function () {
             function getSubMenu() {
-                var menuId = $('#Menu').val();
+                var menuId = $('#Menu').val(); // Lấy giá trị menuId
+                console.log(menuId); // In giá trị kiểm tra
                 $.ajax({
-                    url: '@Url.Action("getSubMenu", "SubMenus")',
-                    type: "GET",
-                    data: { id: menuId },
+                    url: '/Admin/SubMenus/getSubMenu',
+                    type: "get",
+                    data: { id: menuId }, // Truyền menuId vào data
                     success: function (data) {
-                        $("#getSubMenu").html(data);
+                        if (data.code === 200) {
+                            LoadSubMenu1(data.submenu); // Gọi hàm hiển thị với dữ liệu trả về
+                        } else {
+                            $('#tbsubmenu').html('<tr><td colspan="8">Không có submenu.</td></tr>');
+                        }
                     },
-                    error: function (data) {
-                        alert("something went wrong.");
+                    error: function (xhr, status, error) {
+                        console.error('Lỗi:', error);
+                        alert("Không thể tải submenu.");
                     }
                 });
             }
-            getSubMenu();
+
+            // Lấy SubMenu khi thay đổi Menu
             $("#Menu").change(function () {
                 getSubMenu();
-            })
+            });
+
+            // Gọi hàm khi tải trang lần đầu
+            getSubMenu();
         });
 
-        // test ajax
-        
+    </script>
+
+    <script>
+        $(document).on('keyup', '#name', function () {
+            var text = $.trim($(this).val().toLowerCase());
+            var text_create;
+
+            text_create = text
+                .replace(/à|á|ạ|ả|ã|â|ầ|ấ|ậ|ẩ|ẫ|ă|ằ|ắ|ặ|ẳ|ẵ/g, "a")
+                .replace(/è|é|ẹ|ẻ|ẽ|ê|ề|ế|ệ|ể|ễ/g, "e")
+                .replace(/ì|í|ị|ỉ|ĩ/g, "i")
+                .replace(/ò|ó|ọ|ỏ|õ|ô|ồ|ố|ộ|ổ|ỗ|ơ|ờ|ớ|ợ|ở|ỡ/g, "o")
+                .replace(/ù|ú|ụ|ủ|ũ|ư|ừ|ứ|ự|ử|ữ/g, "u")
+                .replace(/ỳ|ý|ỵ|ỷ|ỹ/g, "y")
+                .replace(/đ/g, "d")
+                .replace(/\s+/g, '-')
+                .replace(/-+/g, '-')
+                .replace(/^-+|-+$/g, '');
+
+            $('#meta').val(text_create);
+        }).keyup();
     </script>
 }
