--- a/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Areas/Admin/Views/Accounts/Index.cshtml
@@ -149,7 +149,7 @@
                             let tr = '<tr id="' + v.Id + '">';
                                 tr += '<td>' + (k + 1) + '</td>';
                                 tr += '<td>' + v.Name + '</td>';
-                                tr += '<td><img src="/Content/images/' + v.Img + '"width ="50px"/></td>';
+                                tr += '<td><img src="/Content/images/' + v.Img + '"width ="50px" alt="' + v.Img + '"/></td>';
                                 tr += '<td>' + v.PhoneNum + '</td>';
                                 tr += '<td>' + v.Meta + '</td>';
                                 tr += '<td>' + v.Hide + '</td>';
