--- a/Areas/Admin/Views/Footers/Index.cshtml
+++ b/Areas/Admin/Views/Footers/Index.cshtml
@@ -278,7 +278,7 @@
             });
         });
 
-
+        //dùng ckeditor
 
         $(document).ready(function () {
             // Danh sách các trường cần tích hợp CKEditor
