--- a/Areas/Admin/Views/News/Delete.cshtml
+++ b/Areas/Admin/Views/News/Delete.cshtml
@@ -1,10 +1,5 @@
 ﻿@model HoiTroWebsite.Models.News
 
-@{
-    ViewBag.Title = "Delete";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
-}
-
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -26,7 +21,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+                <img src="~/Content/images/@Model.imagePath" width="100px" />
             </div>
         </dd>
 
@@ -96,12 +91,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("DeleteConfirmed", "News", FormMethod.Post, new { id = "form-delete" }))
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.id) <!-- Ẩn trường id để lấy id -->
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
     }
 </div>
