--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -282,26 +282,19 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-                        @*<li>
-            <a href="@Url.Action("Index", "Menus", new { area = "Admin" })">
-                <i class="fa fa-dashboard fa-fw"></i> Quản lý Menu
-            </a>
-        </li>*@
                         <li>
                             <a href="@Url.Action("Index", "Menus", new { area = "Admin" })"><i class="fa fa-bar-chart-o fa-fw"></i>Quản lý Menu<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="@Url.Action("Index", "SubMenus", new { area = "Admin" })">Quản lý Menu con</a>
                                 </li>
-                                @*<li>
-                    <a href="morris.html">Morris.js Charts</a>
-                </li>*@
+
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", "Banners", new { area = "Admin" })">
-                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Banner
+                            <a href="@Url.Action("Index", "News", new { area = "Admin" })">
+                                <i class="fa fa-dashboard fa-fw"></i> Quản lý News
                             </a>
 
                         </li>
@@ -312,8 +305,8 @@
 
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", "Footers", new { area = "Admin" })">
-                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Footer
+                            <a href="@Url.Action("Index", "Banners", new { area = "Admin" })">
+                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Banner
                             </a>
 
                         </li>
@@ -323,6 +316,13 @@
                             </a>
 
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Footers", new { area = "Admin" })">
+                                <i class="fa fa-dashboard fa-fw"></i> Quản lý Footer
+                            </a>
+
+                        </li>
+
 
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
